[tool.poetry]
name = "aiograph"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "LICENSE"
readme = "README.rst"

[tool.poetry.dependencies]
python = "^3.11"
attrs = "19.3.0"
certifi = "2018.11.29"
aiohttp = "3.9.1"
wheel = "0.31.0"
pytest-asyncio = "0.8.0"
pytest = "3.5.1"
aiohttp-socks = "0.2.2"
codecov = "^2.1.13"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
