[tool.poetry]
name = "aiograph"
version = "0.1.0"
description = "asynchronous Python Telegra.ph API wrapper"
authors = [
    "Alex Root Junior <aiogram@illemius.xyz>",
    "Radim <58228032+Radim296@users.noreply.github.com>",
]
license = "LICENSE"
readme = "README.rst"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.7",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]

[tool.poetry.dependencies]
python = "^3.11"
attrs = "19.3.0"
certifi = "2023.7.22"
aiohttp = "3.9.1"
wheel = "0.31.0"
pytest-asyncio = "0.8.0"
pytest = "3.5.1"
aiohttp-socks = "0.2.2"
codecov = "^2.1.13"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
